--- a/html/menu.html
+++ b/html/menu.html
@@ -20,102 +20,17 @@
 
     <hr>
 
-    <h3>Cursos:</h3>
+    <h3>Ajustes:</h3>
 
     <label class="label">
         <div class="toggle">
-            <input id="cc-save-participants" class="toggle-state" type="checkbox" name="check" value="check" />
+            <input id="setting-censor-text" class="toggle-state" type="checkbox" name="check" value="check" />
             <div class="toggle-inner">
                 <div class="indicator"></div>
             </div>
             <div class="active-bg"></div>
         </div>
-        <div class="label-text">Guardar integrantes de cursos.</div>
-    </label>
-
-    <label class="label">
-        <div class="toggle">
-            <input id="cc-show-counter" class="toggle-state" type="checkbox" name="check" value="check" />
-            <div class="toggle-inner">
-                <div class="indicator"></div>
-            </div>
-            <div class="active-bg"></div>
-        </div>
-        <div class="label-text">Mostrar cursos compartidos.</div>
-    </label>
-
-    <hr>
-    <h3>Esconder:</h3>
-
-    <label class="label">
-        <div class="toggle">
-            <input id="eh-hide-preview" class="toggle-state" type="checkbox" name="check" value="check" />
-            <div class="toggle-inner">
-                <div class="indicator"></div>
-            </div>
-            <div class="active-bg"></div>
-        </div>
-        <div class="label-text">Esconder pre-vista de blog en historial.</div>
-    </label>
-
-    <label class="label">
-        <div class="toggle">
-            <input id="eh-hide-piechart" class="toggle-state" type="checkbox" name="check" value="check" />
-            <div class="toggle-inner">
-                <div class="indicator"></div>
-            </div>
-            <div class="active-bg"></div>
-        </div>
-        <div class="label-text">Esconder gráfico de tareas.</div>
-    </label>
-
-    <label class="label">
-        <div class="toggle">
-            <input id="eh-shorten-message" class="toggle-state" type="checkbox" name="check" value="check" />
-            <div class="toggle-inner">
-                <div class="indicator"></div>
-            </div>
-            <div class="active-bg"></div>
-        </div>
-        <div class="label-text">Acortar mensajes largos.</div>
-    </label>
-
-    <hr>
-
-    <h3>Utilidades:</h3>
-
-
-    <label class="label">
-        <div class="toggle">
-            <input id="qol-grade-comments" class="toggle-state" type="checkbox" name="check" value="check" />
-            <div class="toggle-inner">
-                <div class="indicator"></div>
-            </div>
-            <div class="active-bg"></div>
-        </div>
-        <div class="label-text">Pop-Up al editar comentario de una nota.</div>
-    </label>
-
-    <label class="label">
-        <div class="toggle">
-            <input id="qol-element-resizer" class="toggle-state" type="checkbox" name="check" value="check" />
-            <div class="toggle-inner">
-                <div class="indicator"></div>
-            </div>
-            <div class="active-bg"></div>
-        </div>
-        <div class="label-text">PDFs redimensionables.</div>
-    </label>
-
-    <label class="label">
-        <div class="toggle">
-            <input id="qol-week-counter" class="toggle-state" type="checkbox" name="check" value="check" />
-            <div class="toggle-inner">
-                <div class="indicator"></div>
-            </div>
-            <div class="active-bg"></div>
-        </div>
-        <div class="label-text">Número de semana en calendario.</div>
+        <div class="label-text">Censurar texto.</div>
     </label>
 
     <hr>
