--- a/html/menu.html
+++ b/html/menu.html
@@ -30,7 +30,18 @@
             </div>
             <div class="active-bg"></div>
         </div>
-        <div class="label-text">Censurar texto.</div>
+        <div class="label-text">Utilizar la api para censurar texto.</div>
+    </label>
+
+    <label class="label">
+        <div class="toggle">
+            <input id="setting-censor-hate" class="toggle-state" type="checkbox" name="check" value="check" />
+            <div class="toggle-inner">
+                <div class="indicator"></div>
+            </div>
+            <div class="active-bg"></div>
+        </div>
+        <div class="label-text">Censurar solo texto con Hate Speech.</div>
     </label>
 
     <hr>
