--- a/html/menu.html
+++ b/html/menu.html
@@ -30,7 +30,7 @@
             </div>
             <div class="active-bg"></div>
         </div>
-        <div class="label-text">Utilizar la api para censurar texto.</div>
+        <div class="label-text">Censurar el texto con contenido ofensivo.</div>
     </label>
 
     <label class="label">
@@ -41,7 +41,20 @@
             </div>
             <div class="active-bg"></div>
         </div>
-        <div class="label-text">Censurar solo texto con Hate Speech.</div>
+        <div class="label-text">No censurar ofensas, solo Hate Speech.</div>
+    </label>
+
+    <h3>Dev Mode:</h3>
+
+    <label class="label">
+        <div class="toggle">
+            <input id="setting-show-logs" class="toggle-state" type="checkbox" name="check" value="check" />
+            <div class="toggle-inner">
+                <div class="indicator"></div>
+            </div>
+            <div class="active-bg"></div>
+        </div>
+        <div class="label-text">Mostrar logs.</div>
     </label>
 
     <hr>
